# Square-Wheel

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO list.txt  logo.xcf
.github/workflows/: ci.yml  ci_build.yml
demo/: README.md  build_demo_map_2.sh  export_textures.py  finalize_textures.py  finalize_textures.sh  run_demo.bat  run_demo.sh  run_demo_generic.bat  run_demo_generic.sh  run_demo_i686.bat
demo/maps/: demo.map  demo2.map
demo/materials/: animated.json  demo_materials.json  fire.json  liquid.json  sky.json
demo/models_src/: Dark_Priest.blend  authors.txt  fern.blend  monkey_head_animation.blend  sky.blend  wall_oil_lamp.blend  wormbeak.blend
docs/: Demonstraçionnaja Karta 2.md  Dinamiceskoje osvescenije.md  Mnogopotocnostj.md  Nebesnyj Kub.md  O nacaljnoj stadii razrabotki.md  O risovanii v THIEF.md  O složnorealizujemyh effektah.md  Ob osvescenii dinamiceskih modelej.md  Opyt predšestvennikov.md  Portaly i zerkala.md  Rasširennyj dinamiceskij diapazon.md  Smešivanije.md  Teksturnyje Effekty v UNREAL.md  Teksturnyje effekty.md  Vožmožnyj podhod.md  vvedenije.md
export_scripts/: make_materials_for_quake4_textures.py  make_materials_for_quake_textures.py
other/: demo.map
src/: Cargo.toml  build.rs  build_release.sh  build_release_generic.sh  build_release_i686.sh  build_release_x86_64_legacy.sh  clippy.sh  lib.rs  run_clippy.sh  rustfmt.toml
src/common/: bbox.rs  bsp_builder.rs  bsp_map_compact.rs  bsp_map_compact_conversion.rs  bsp_map_save_load.rs  camera_controller.rs  camera_rotation_controller.rs  clipping.rs  clipping_bsp.rs  clipping_polygon.rs  color.rs  debug_rasterizer.rs  debug_renderer.rs  fixed_math.rs  image.rs  lib.rs  light_cube.rs  light_hemisphere.rs  light_trace.rs  lightmap.rs  lightmap_compression.rs  lightmaps_builder.rs  map_csg.rs  map_file.rs  map_file_common.rs  map_file_q1.rs  map_file_q4.rs  map_lights.rs  map_polygonizer.rs  material.rs  material_fire.rs  material_function.rs  material_water.rs  math_types.rs  matrix.rs  mod.rs  performance_counter.rs  plane.rs  pvs.rs  pvs_boxed.rs  (+6 more)
src/lightmapper/: main.rs
src/map_compiler/: main.rs  map_file.rs
src/map_viewer/: debug_rasterizer.rs  debug_renderer.rs  main.rs
src/square_wheel/: abstract_color.rs  clipping_polygon.rs  commands_processor.rs  commands_queue.rs  config.rs  console.rs  debug_stats_printer.rs  depth_renderer.rs  draw_ordering.rs  dynamic_models_index.rs  dynamic_objects_index.rs  equations.rs  fast_math.rs  frame_info.rs  frame_number.rs  frame_upscaler.rs  game_interface.rs  generative_texture_effect_fire.rs  generative_texture_effect_layered.rs  generative_texture_effect_turb.rs  generative_texture_effect_water.rs  generative_texture_effects_common.rs  host.rs  host_config.rs  inline_models_index.rs  light.rs  main.rs  map_materials_processor.rs  map_materials_processor_config.rs  map_materials_processor_structs.rs  map_visibility_calculator.rs  mod.rs  partial_renderer.rs  performance_counter.rs  postprocessor.rs  postprocessor_config.rs  rasterizer.rs  rect_splitting.rs  renderer.rs  renderer_config.rs  (+15 more)
src/test_game/: components.rs  game.rs  game_map.rs  main.rs  save_load.rs  test_game.rs  test_game_physics.rs  world_spawn.rs  world_update.rs
test_data/: quake4_special_materials.json  quake_special_materials.json
(+71 files in other folders)
