[package]
name = "square_wheel"
version = "0.2.0"
authors = ["Panzerschrek <AntiPanzerschrek@yandex.ru>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = true

[features]
rasterizer_unchecked_div = []

[dependencies]
cgmath = { version = "0.18", features = ["serde" ] }
hecs = { version = "0.9.0", features = ["column-serialize", "row-serialize" ] }
num_cpus = "1.13.1"
rayon = "1.5.3"
sdl2 = { version = "0.35", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_type_name = "0.2.0"
serde_json = "1.0"
structopt = "0.3"

rapier3d = { path = "../rapier/crates/rapier3d", features= ["serde-serialize"] }

# Engine library.
[lib]
name = "square_wheel_lib"
path = "lib.rs"

# Map compiler executable.
[[bin]]
name = "map_compiler"
path = "map_compiler/main.rs"

# Lightmapper executable.
[[bin]]
name = "lightmapper"
path = "lightmapper/main.rs"

# Helper tool for map visualisation.
[[bin]]
name = "map_viewer"
path = "map_viewer/main.rs"

# Test game.
[[bin]]
name = "square_wheel"
path = "test_game/main.rs"
