[package]
name = "square_wheel"
version = "0.4.0"
authors = ["Panzerschrek <AntiPanzerschrek@yandex.ru>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = true

[features]
rasterizer_unchecked_div = []

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
cgmath = { version = "0.18", features = ["serde" ] }
hecs = { version = "0.9.0", features = ["column-serialize", "row-serialize" ] }
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg", "tga"] }
num_cpus = "1.13.1"
rayon = "1.5.3"
sdl2 = { version = "0.35" }
serde = { version = "1.0", features = ["derive"] }
serde-name = "0.2.1"
serde_json = "1.0"
structopt = "0.3"

rapier3d = { path = "../rapier/crates/rapier3d", features= ["serde-serialize"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Engine library.
[lib]
name = "square_wheel_lib"
path = "lib.rs"

# Map compiler executable.
[[bin]]
name = "map_compiler"
path = "map_compiler/main.rs"

# Lightmapper executable.
[[bin]]
name = "lightmapper"
path = "lightmapper/main.rs"

# Helper tool for map visualisation.
[[bin]]
name = "map_viewer"
path = "map_viewer/main.rs"

# Test game.
[[bin]]
name = "square_wheel"
path = "test_game/main.rs"
